--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "require": {
         "php": "^8.2",
         "area17/twill": "^3.5.3",
+        "cwsdigital/twill-metadata": "^1.4",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1"
     },
